fix: align tooltip

--- a/webui/react/src/components/ProjectCard.module.scss
+++ b/webui/react/src/components/ProjectCard.module.scss
@@ -18,6 +18,9 @@
   .workspaceContainer {
     grid-area: workspace;
   }
+  .workspaceIcon {
+    width: fit-content;
+  }
   .footerContainer {
     align-items: end;
     display: flex;
